--- a/index.html
+++ b/index.html
@@ -7,44 +7,58 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #121212;
             color: #fff;
+            text-align: center;
         }
         header {
-            background-color: #1e1e1e;
-            padding: 20px;
+            background: linear-gradient(135deg, #1e1e1e, #3a3a3a);
+            padding: 40px;
             text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
         }
         nav ul {
             list-style: none;
             padding: 0;
+            display: flex;
+            justify-content: center;
         }
         nav ul li {
-            display: inline;
-            margin: 0 15px;
+            margin: 0 20px;
         }
         nav ul li a {
             color: #fff;
             text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+        nav ul li a:hover {
+            color: #ff9800;
         }
         section {
-            padding: 40px;
-            text-align: center;
+            padding: 60px 20px;
         }
         .project {
             background-color: #222;
-            padding: 20px;
+            padding: 30px;
             margin: 20px auto;
-            width: 60%;
+            width: 70%;
             border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+            transition: transform 0.3s;
+        }
+        .project:hover {
+            transform: scale(1.05);
         }
         footer {
-            text-align: center;
+            background: #1e1e1e;
             padding: 20px;
-            background-color: #1e1e1e;
+            text-align: center;
+            font-size: 14px;
+            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
