--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,7 +14,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Metronic "Acecv" Frontend Freebie</title>
+        <title>Mohamed Abdelsamiea</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -86,14 +86,12 @@
                 <div class="row">
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
-                            <h1 class="promo-block-title">Alisa <br/> Portman</h1>
-                            <p class="promo-block-text">Web &amp; UI/UX Designer</p>
+                            <h1 class="promo-block-title">Mohamed <br/> Abdelsamiea</h1>
+                            <p class="promo-block-text">Full Stack Web Developer</p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="#" class="social-icons"><i class="icon-social-facebook"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-twitter"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-dribbble"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-behance"></i></a></li>
+                            <li><a href="#" class="social-icons"><i class="icon-social-github"></i></a></li>
+                            <li><a href="#" class="social-icons"><i class="fa-brands fa-upwork"></i></a></li>
                             <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                         </ul>
                     </div>
