--- a/HTML/index.html
+++ b/HTML/index.html
@@ -119,34 +119,24 @@
                             <div class="margin-b-50">
                                 <div class="margin-b-30">
                                     <h2>About Me</h2>
-                                    <p>I'm Alisa Portman, orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    <p>I’m Mohamed Abd Elsamiea, a passionate Full Stack Web Developer specializing in .NET and backend development. As a Computer Engineering student, I thrive on building high-performance web applications that are scalable, secure, and efficient.</p>
+                                    <p>My expertise lies in C#, .NET Core, ASP.NET, and SQL databases, along with frontend technologies like HTML, CSS, Bootstrap, and JavaScript. I enjoy architecting robust backend systems, designing RESTful APIs, and working with cloud services to deploy scalable applications.</p>
+                                    <p>I've worked on projects ranging from e-commerce platforms to AI-powered applications, always striving to write clean, maintainable, and efficient code. My goal is to master enterprise-level .NET development and contribute to innovative software solutions.</p>
+                                    <p>When I'm not coding, I’m exploring new web technologies, contributing to open-source projects, and refining my problem-solving skills. I’m always open to new opportunities and collaborations in .NET development!</p>
                                 </div>
-                                <a href="#" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Download my CV</a>
+                                <a href="./Mohamed_Abdelsamiea_Resume.pdf" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Download my CV</a>
                             </div>
                         </div>
 
                         <h2>My Skills</h2>
-                        <!-- Progress Box -->
-                        <div class="progress-box">
-                            <h5>Adobe Illustrator <span class="color-heading pull-right">87%</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="87"></div>
-                            </div>
-                        </div>
-                        <div class="progress-box">
-                            <h5>Adobe Photoshop <span class="color-heading pull-right">96%</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="96"></div>
-                            </div>
-                        </div>
-                        <div class="progress-box">
-                            <h5>Graphic Design <span class="color-heading pull-right">77%</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="77"></div>
-                            </div>
-                        </div>
-                        <!-- End Progress Box -->
+                        <ul class="skill-list">
+                            <li><i class="fas fa-code"></i> C# - Advanced</li>
+                            <li><i class="fab fa-microsoft"></i> .NET Framework - Expert</li>
+                            <li><i class="fas fa-database"></i> SQL - Intermediate</li>
+                            <li><i class="fas fa-html5"></i> HTML - Intermediate</li>
+                            <li><i class="fas fa-css3-alt"></i> CSS - Intermediate</li>
+                            <li><i class="fab fa-js"></i> JavaScript - Intermediate</li>
+                        </ul>
                     </div>
                 </div>
                 <!--// end row -->
