--- a/HTML/index.html
+++ b/HTML/index.html
@@ -100,14 +100,13 @@
                             <p class="promo-block-text">Full Stack Web Developer</p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="#" class="social-icons"><i class="icon-social-github"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="fa-brands fa-upwork"></i></a></li>
+                            <li><a href="#" class="social-icons"><i class="icon-social-github"></i></a></li
                             <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
                         <div class="promo-block-img-wrap">
-                            <img class="promo-block-img img-responsive" src="img/mockup/avatar-01.png" align="Avatar">
+                            <img class="promo-block-img img-responsive" src="img/avatar-01.png" align="Avatar">
                         </div>
                     </div>
                 </div>
