--- a/HTML/index.html
+++ b/HTML/index.html
@@ -120,9 +120,6 @@
         <div id="about">
             <div class="container content-lg">
                 <div class="row">
-                    <div class="col-sm-5 sm-margin-b-60">
-                        <img class="full-width img-responsive" src="img/500x700/01.jpg" alt="Image">
-                    </div>
                     <div class="col-sm-7">
                         <div class="section-seperator margin-b-50">
                             <div class="margin-b-50">
@@ -133,7 +130,7 @@
                                     <p>I've worked on projects ranging from e-commerce platforms to AI-powered applications, always striving to write clean, maintainable, and efficient code. My goal is to master enterprise-level .NET development and contribute to innovative software solutions.</p>
                                     <p>When I'm not coding, I’m exploring new web technologies, contributing to open-source projects, and refining my problem-solving skills. I’m always open to new opportunities and collaborations in .NET development!</p>
                                 </div>
-                                <a href="./Mohamed_Abdelsamiea_Resume.pdf" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Download my CV</a>
+                                <a href="Mohamed_Abdelsamiea_Resume.pdf" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Download my CV</a>
                             </div>
                         </div>
 
