--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,15 +1,4 @@
 <!DOCTYPE html>
-<!-- ==============================
-    Project:        Metronic "Acecv" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
-    Version:        1.0
-    Author:         KeenThemes
-    Primary use:    Corporate, Business Themes.
-    Email:          support@keenthemes.com
-    Follow:         http://www.twitter.com/keenthemes
-    Like:           http://www.facebook.com/keenthemes
-    Website:        http://www.keenthemes.com
-    Premium:        Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-================================== -->
 <html lang="en" class="no-js">
     <!-- BEGIN HEAD -->
     <head>
@@ -61,14 +50,6 @@
                             <span class="sr-only">Toggle navigation</span>
                             <span class="toggle-icon"></span>
                         </button>
-
-                        <!-- Logo -->
-                        <div class="logo">
-                            <a class="logo-wrap" href="#body">
-                                <img class="logo-img" src="img/logo.png" alt="Asentus Logo">
-                            </a>
-                        </div>
-                        <!-- End Logo -->
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -130,7 +111,7 @@
                                     <p>I've worked on projects ranging from e-commerce platforms to AI-powered applications, always striving to write clean, maintainable, and efficient code. My goal is to master enterprise-level .NET development and contribute to innovative software solutions.</p>
                                     <p>When I'm not coding, I’m exploring new web technologies, contributing to open-source projects, and refining my problem-solving skills. I’m always open to new opportunities and collaborations in .NET development!</p>
                                 </div>
-                                <a href="Mohamed_Abdelsamiea_Resume.pdf" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Download my CV</a>
+                                <a href="Mohamed_Abdelsamie_Resume.pdf" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Download my CV</a>
                             </div>
                         </div>
 
@@ -168,7 +149,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 md-margin-b-4">
-                    <div class="service bg-color-base wow zoomIn" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
+                    <div class="service" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
                         <div class="service-element">
                             <i class="service-icon color-white fas fa-database"></i>
                         </div>
@@ -265,15 +246,6 @@
     </div>
 </div>
 <!-- End Projects -->
-
-        <!-- Promo Banner -->
-        <div class="promo-banner parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
-            <div class="container-sm content-lg">
-                <h2 class="promo-banner-title">Displaying the Result</h2>
-                <p class="promo-banner-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-            </div>
-        </div>
-        <!-- End Promo Banner -->
             
         <!-- Contact -->
 <div id="contact">
@@ -312,22 +284,6 @@
 <!-- End Contact -->
 
         <!--========== END PAGE LAYOUT ==========-->
-
-        <!--========== FOOTER ==========-->
-        <footer class="footer">
-            <div class="content container">
-                <div class="row">
-                    <div class="col-xs-6">
-                        <img class="footer-logo" src="img/logo.png" alt="Acecv Logo">
-                    </div>
-                    <div class="col-xs-6 text-right sm-text-left">
-                        <p class="margin-b-0"><a class="fweight-700" href="http://keenthemes.com/preview/acecv/">Acecv</a> Theme Powered by: <a class="fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
-                    </div>
-                </div>
-                <!--// end row -->
-            </div>
-        </footer>
-        <!--========== END FOOTER ==========-->
 
         <!-- Back To Top -->
         <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
