--- a/HTML/index.html
+++ b/HTML/index.html
@@ -81,8 +81,8 @@
                             <p class="promo-block-text">Full Stack Web Developer</p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="#" class="social-icons"><i class="icon-social-github"></i></a></li
-                            <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                            <li><a href="https://github.com/MohamedAbdelsamiea" class="social-icons"><i class="icon-social-github"></i></a></li
+                            <li><a href="https://www.linkedin.com/in/mohamed-abdelsamiea-baisam-elshamandy-398573320/" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
